# CS6868_Project

./: LICENSE  README.md  dune-project  main.tex  notes.txt  references.bib
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/code/: benchmark.ml  lock_sync_dual_queue.ml  lock_sync_dual_queue.mli  lockfree_exchanger.ml  lockfree_exchanger.mli  lockfree_sync_dual_queue.mli  project_lock_sync_dual_queue.cma  project_lock_sync_dual_queue.cmxa  project_lock_sync_dual_queue.cmxs  project_lock_sync_dual_queue.ml-gen  project_lockfree_exchanger.cma  project_lockfree_exchanger.cmxa  project_lockfree_exchanger.cmxs  project_lockfree_exchanger.ml-gen  project_lockfree_sync_dual_queue.cma  project_lockfree_sync_dual_queue.cmxa  project_lockfree_sync_dual_queue.cmxs  project_lockfree_sync_dual_queue.ml-gen  qcheck_lin.ml  test_manual.ml
_build/default/code/.merlin-conf/: exe-benchmark  exe-qcheck_lin  exe-test_manual  lib-project_lock_sync_dual_queue  lib-project_lockfree_exchanger  lib-project_lockfree_sync_dual_queue
_build/default/code/.project_lock_sync_dual_queue.objs/: project_lock_sync_dual_queue__Lock_sync_dual_queue.impl.d  project_lock_sync_dual_queue__Lock_sync_dual_queue.intf.d
code/: Makefile  benchmark_results.csv  dune  lock_sync_dual_queue.ml  lockfree_sync_dual_queue.ml  lockfree_sync_dual_queue.mli  non_atomic_lockfree_sync_dual_queue_tsan.ml  notes.md  qcheck_lin.ml  temp.ml
code/producer_consumer_pipeline/: dune  pipeline_demo.ml
code/results/: benchmark-debug.csv  benchmark-tsan.csv  benchmark.csv
(+44 files in other folders)
